--- a/bar.html
+++ b/bar.html
@@ -13,6 +13,52 @@
       color: #23243a;
       background: linear-gradient(120deg, #fffbe6 0%, #f7f7fa 100%);
     }
+    .topnav {
+      background: linear-gradient(120deg, #fffbe6 0%, #f7f7fa 100%);
+      box-shadow: 0 2px 12px rgba(191,161,74,0.10);
+      position: sticky;
+      top: 0;
+      z-index: 200;
+    }
+    .topnav-inner {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 10px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .topnav-logo {
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+    }
+    .topnav-logo img {
+      height: 40px;
+      margin-right: 8px;
+    }
+    .topnav-menu {
+      display: flex;
+      gap: 16px;
+    }
+    .topnav-btn {
+      color: #23243a;
+      text-decoration: none;
+      font-weight: 500;
+      padding: 8px 16px;
+      border-radius: 18px;
+      transition: background 0.3s, color 0.3s;
+    }
+    .topnav-btn:hover {
+      background: rgba(191,161,74,0.1);
+      color: #bfa14a;
+    }
+    .topnav-btn.active {
+      background: none !important;
+      color: #23243a !important;
+      border: none !important;
+      box-shadow: none !important;
+    }
     header {
       text-align: center;
       padding: 60px 20px 20px;
@@ -44,39 +90,9 @@
       box-shadow: 0 2px 12px rgba(191,161,74,0.06);
       text-align: center;
     }
-    .tabs {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      margin-top: 20px;
-      gap: 18px;
-    }
-    .tab-button {
-      margin: 5px;
-      padding: 14px 38px;
-      background: #fffbe6;
-      border: 2px solid #bfa14a;
-      border-radius: 30px;
-      cursor: pointer;
-      transition: all 0.3s cubic-bezier(.4,2,.6,1);
-      text-decoration: none;
-      color: #bfa14a;
-      font-weight: 600;
-      font-size: 1.1em;
-      letter-spacing: 0.04em;
-      box-shadow: 0 2px 8px rgba(191,161,74,0.04);
-      position: relative;
-    }
-    .tab-button:hover, .tab-button.active {
-      background: #bfa14a;
-      color: #23243a;
-      border-color: #bfa14a;
-      box-shadow: 0 4px 24px rgba(191,161,74,0.12);
-    }
     .tab-content {
       animation: fadeIn 0.5s ease forwards;
       padding: 30px;
-      background: none;
     }
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
@@ -89,94 +105,39 @@
       margin-top: 20px;
       border-radius: 10px;
     }
-    /* --- カレンダー共通スタイル --- */
-    .calendar-controls {
-      text-align: center;
-      margin-bottom: 10px;
-    }
-    .calendar-controls button {
-      background-color: #3498db;
-      border: none;
-      color: white;
-      padding: 8px 15px;
-      margin: 0 10px;
-      border-radius: 5px;
-      cursor: pointer;
-      font-weight: bold;
-      transition: background-color 0.3s ease;
-    }
-    .calendar-controls button:hover {
-      background-color: #217dbb;
-    }
-    table.calendar {
-      width: 100%;
-      max-width: 600px;
-      margin: 0 auto;
-      border-collapse: collapse;
-      background: white;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-    th, td {
-      border: 1px solid #ddd;
-      text-align: center;
-      padding: 12px 8px;
-      vertical-align: top;
-      height: 80px;
-      font-weight: 600;
-      font-size: 14px;
-      position: relative;
-    }
-    th {
-      background-color: #eee;
-      font-weight: 700;
-    }
-    td.event-on {
-      background-color: #b3e5fc;
-      color: #0a3d62;
-    }
-    td.event-qn {
-      background-color: #f8bbd0;
-      color: #6a1b4d;
-    }
-    td.event-bar {
-      background-color: #fff9c4;
-      color: #665c00;
-    }
-    .badge { display:inline-block; margin-top:6px; padding:2px 8px; border-radius:12px; font-size:12px; font-weight:bold; }
-    .badge-bar { background:#fffde7; color:#665c00; border:1px solid #ffe082; }
-    .badge-qn { background:#f8bbd0; color:#6a1b4d; border:1px solid #f06292; }
-    .badge-on { background:#b3e5fc; color:#0a3d62; border:1px solid #4fc3f7; }
-    .today { outline:2px solid #ff7043; outline-offset:-2px; background: #fff3e0 !important; }
-    .date-num { font-size:1.2em; font-weight:700; }
-    #month-select, #year-select { padding:4px 8px; border-radius:5px; border:1px solid #bbb; margin:0 2px; }
-    #today-btn { background:#43a047; color:#fff; border:none; border-radius:5px; padding:6px 12px; margin:0 5px; cursor:pointer; font-weight:bold; }
-    #today-btn:hover { background:#388e3c; }
+    
     @media (max-width: 700px) {
       h1 { font-size: 1.5em; }
       .overview { font-size: 1em; padding: 12px 8px; }
-      .tabs { gap: 8px; }
-      .tab-button { padding: 10px 18px; font-size: 1em; }
     }
   </style>
 </head>
 <body>
+    <!-- 統一ヘッダー -->
+  <div class="topnav">
+    <div class="topnav-inner">
+      <a href="index.html" class="topnav-logo">
+        <img src="https://p-ce.group/p3/img/logo_w.png" alt="ONENIGHT BAR">
+        <span style="color:#23243a;">ONENIGHT BAR</span>
+      </a>
+      <nav class="topnav-menu">
+        <a href="index.html" class="topnav-btn">TOP</a>
+        <a href="bar-onenight.html" class="topnav-btn active">BAR ONENIGHT</a>
+        <a href="onenight.html" class="topnav-btn">CLUB ONENIGHT</a>
+        <a href="queennight.html" class="topnav-btn">CLUB QUEENNIGHT</a>
+      </nav>
+    </div>
+  </div>
+
+    <!-- メイン -->
   <header>
     <h1>ONENIGHT BAR</h1>
     <div class="gold-line"></div>
     <p class="overview">ONENIGHT BARは落ち着いた雰囲気と上質なサービスで、特別な夜をお過ごしいただけるBARです。お一人様から団体様まで、心地よい時間をお楽しみください。</p>
-    <div class="tabs">
-      <a class="tab-button" href="index.html">TOP</a>
-      <a class="tab-button active" href="bar.html">ONENIGHT BAR</a>
-      <a class="tab-button" href="onenight.html">CLUB ONENIGHT</a>
-      <a class="tab-button" href="queennight.html">CLUB QUEENNIGHT</a>
-    </div>
   </header>
   <div class="tab-content active">
     <h2>ONENIGHT BAR</h2>
     <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80" alt="BARイメージ" style="width:100%;max-width:600px;border-radius:16px;box-shadow:0 2px 12px rgba(0,0,0,0.12);margin:24px auto;display:block;">
-    <!-- ここに他のコンテンツが入る場合はこの下に追加 -->
   </div>
 </body>
 </html>
