--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
       min-height: 100vh;
       color: #23243a;
       background: linear-gradient(120deg, #fffbe6 0%, #f7f7fa 100%);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
     }
     .center-container {
       width: 100%;
@@ -125,7 +121,7 @@
     .calendar-controls button:hover, #today-btn:hover {
       background-color: #a88c2c;
     }
-    #calendar-area {
+    .calendar-area {
       width: 100%;
       overflow-x: auto;
     }
@@ -186,37 +182,146 @@
       th, td { font-size: 11px; height: 44px; padding: 4px 2px; }
       .calendar-controls button, #today-btn { padding: 6px 8px; margin: 0 2px; font-size: 13px; }
     }
+    .topnav {
+      background: linear-gradient(120deg, #fffbe6 0%, #f7f7fa 100%);
+      box-shadow: 0 2px 12px rgba(191,161,74,0.10);
+      position: sticky;
+      top: 0;
+      z-index: 200;
+    }
+    .topnav-inner {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 10px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .topnav-logo {
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+    }
+    .topnav-logo img {
+      height: 40px;
+      margin-right: 8px;
+    }
+    .topnav-menu {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+    }
+    .topnav-btn {
+  color: #23243a;
+  text-decoration: none;
+  font-weight: 500;
+  padding: 8px 16px;
+  border-radius: 24px;
+  transition: all 0.3s ease;
+    }
+    .topnav-btn:hover {
+      background: rgba(191,161,74,0.1);
+  color: #bfa14a;
+    }
+    footer {
+      background: linear-gradient(120deg, #fffbe6 0%, #f7f7fa 100%);
+      color: #23243a;
+      padding: 36px 0 18px 0;
+      margin-top: 60px;
+      text-align: center;
+      border-top: 1.5px solid #e6d8b7;
+      box-shadow: 0 -2px 12px rgba(191,161,74,0.08);
+    }
+    footer img {
+      height: 38px;
+      margin-bottom: 18px;
+      filter: drop-shadow(0 2px 8px #bfa14a);
+    }
+    footer .footer-menu {
+      margin-bottom: 18px;
+      font-size: 1.1em;
+      letter-spacing: 0.04em;
+    }
+    footer .footer-menu a {
+      color: #23243a;
+      text-decoration: none;
+      margin: 0 12px;
+    }
+    footer .footer-menu a:hover {
+      text-decoration: underline;
+    }
+    footer .copyright {
+      font-size: 0.98em;
+      opacity: 0.7;
+    }
+    .cast-switch-btn {
+      padding: 8px 24px;
+      margin: 0 8px 20px 8px;
+      border-radius: 20px;
+      border: 2px solid #bfa14a;
+      background: #fffbe6;
+      color: #bfa14a;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.2s;
+      font-size: 1em;
+      letter-spacing: 0.04em;
+      box-shadow: 0 2px 8px rgba(191,161,74,0.04);
+    }
+    .cast-switch-btn.active, .cast-switch-btn:hover {
+      background: #bfa14a;
+      color: #23243a;
+      border-color: #bfa14a;
+      box-shadow: 0 4px 24px rgba(191,161,74,0.12);
+    }
   </style>
 </head>
 <body>
+    <!-- 統一ヘッダー -->
+  <div class="topnav">
+    <div class="topnav-inner">
+      <a href="index.html" class="topnav-logo">
+        <img src="https://p-ce.group/p3/img/logo_w.png" alt="ONENIGHT GROUP">
+        <span style="color:#23243a;">ONENIGHT GROUP</span>
+      </a>
+      <nav class="topnav-menu">
+        <a href="index.html" class="topnav-btn" style="color:#23243a;">TOP</a>
+        <a href="bar-onenight.html" class="topnav-btn" style="color:#23243a;">BAR ONENIGHT</a>
+        <a href="onenight.html" class="topnav-btn" style="color:#23243a;">CLUB ONENIGHT</a>
+        <a href="queennight.html" class="topnav-btn" style="color:#23243a;">CLUB QUEENNIGHT</a>
+      </nav>
+    </div>
+  </div>
   <div class="center-container">
     <h1>ONENIGHT GROUP</h1>
     <div class="gold-line"></div>
     <p class="overview">ONENIGHTGROUPは来場いただいたお客様に満足頂ける時間を提供出来るように誠心誠意努めております。</p>
-    <div class="tabs" style="margin-bottom:32px;">
-      <a class="tab-button active" href="index.html">TOP</a>
-      <a class="tab-button" href="bar.html">ONENIGHT BAR</a>
-      <a class="tab-button" href="onenight.html">CLUB ONENIGHT</a>
-      <a class="tab-button" href="queennight.html">CLUB QUEENNIGHT</a>
+    <!-- カレンダー部分ここから（元の仕様に戻す） -->
+    <div class="calendar-area">
+      <iframe src="calendar.html" style="width:100%;min-height:600px;border:none;" title="営業カレンダー"></iframe>
     </div>
-    <div id="calendar-area">
-      <h2 id="calendar-title"></h2>
-      <div class="calendar-controls">
-        <button id="prev-month" title="前の月"><span aria-hidden="true">&#8592;</span></button>
-        <select id="month-select"></select>
-        <select id="year-select"></select>
-        <button id="today-btn">今日</button>
-        <button id="next-month" title="次の月"><span aria-hidden="true">&#8594;</span></button>
-      </div>
-      <table class="calendar" id="calendar"></table>
-    </div>
+    <!-- カレンダー部分ここまで -->
   </div>
+  <footer>
+    <div style="max-width:900px;margin:0 auto;">
+      <img src="https://p-ce.group/p3/img/logo_w.png" alt="ONENIGHT GROUP" style="height:38px;margin-bottom:18px;filter:drop-shadow(0 2px 8px #bfa14a);">
+      <div class="footer-menu" style="margin-bottom:18px;font-size:1.1em;letter-spacing:0.04em;">
+        <a href="index.html" style="color:#23243a;text-decoration:none;margin:0 12px;">TOP</a>
+        <a href="bar-onenight.html" style="color:#23243a;text-decoration:none;margin:0 12px;">BAR ONENIGHT</a>
+        <a href="onenight.html" style="color:#23243a;text-decoration:none;margin:0 12px;">CLUB ONENIGHT</a>
+        <a href="queennight.html" style="color:#23243a;text-decoration:none;margin:0 12px;">CLUB QUEENNIGHT</a>
+      </div>
+      <div class="copyright" style="font-size:0.98em;opacity:0.7;">© 2025 ONENIGHT GROUP</div>
+    </div>
+  </footer>
   <script>
+    
     const daysOfWeek = ["日", "月", "火", "水", "木", "金", "土"];
     const clubOnWeeks = [1, 3];
     const clubQnWeeks = [0, 2];
     let currentDate = new Date();
     function pad(num) { return num < 10 ? '0' + num : num; }
+    // --- カレンダー描画処理 ---
     function renderCalendar(date) {
       const year = date.getFullYear();
       const month = date.getMonth();
@@ -271,6 +376,7 @@
       html += "</tr></tbody>";
       calendar.innerHTML = html;
     }
+    // --- カレンダーの月・年セレクタを生成 ---
     function populateSelectors() {
       const monthSel = document.getElementById('month-select');
       const yearSel = document.getElementById('year-select');
@@ -284,6 +390,7 @@
         yearSel.innerHTML += `<option value='${y}'>${y}年</option>`;
       }
     }
+    // --- カレンダーの前月・次月・今日・月/年変更ボタンのイベント登録 ---
     document.getElementById("prev-month").addEventListener("click", () => {
       currentDate.setMonth(currentDate.getMonth() - 1);
       renderCalendar(currentDate);
@@ -304,6 +411,10 @@
       currentDate.setFullYear(Number(e.target.value));
       renderCalendar(currentDate);
     });
+    document.getElementById('btn-cast').onclick = ()=>renderList('cast');
+    document.getElementById('btn-staff').onclick = ()=>renderList('staff');
+    renderList('cast');
+    // --- 初期化処理（セレクタ生成＆カレンダー初期表示） ---
     populateSelectors();
     renderCalendar(currentDate);
   </script>
