--- a/queennight.html
+++ b/queennight.html
@@ -304,7 +304,7 @@
   <div class="topnav">
     <div class="topnav-inner">
       <a href="index.html" class="topnav-logo">
-        <img src="https://p-ce.group/p3/img/logo_w.png" alt="ONENIGHT GROUP">
+        <img src="worldpic/logo.png" alt="ONENIGHT GROUP">
         <span style="color:#23243a;">ONENIGHT GROUP</span>
       </a>
       <nav class="topnav-menu">
@@ -345,7 +345,7 @@
   </div>
   <footer style="background: linear-gradient(120deg, #fffbe6 0%, #f7f7fa 100%); color:#23243a; padding:36px 0 18px 0; margin-top:60px; text-align:center; border-top: 1.5px solid #e6d8b7; box-shadow: 0 -2px 12px rgba(191,161,74,0.08);">
     <div style="max-width:900px;margin:0 auto;">
-      <img src="https://p-ce.group/p3/img/logo_w.png" alt="CLUB QUEENNIGHT" style="height:38px;margin-bottom:18px;filter:drop-shadow(0 2px 8px #bfa14a);">
+      <img src="worldpic/logo.png" alt="CLUB QUEENNIGHT" style="height:38px;margin-bottom:18px;filter:drop-shadow(0 2px 8px #bfa14a);">
       <div class="footer-menu" style="margin-bottom:18px;font-size:1.1em;letter-spacing:0.04em;">
         <a href="index.html" style="color:#23243a;text-decoration:none;margin:0 12px;">TOP</a>
         <a href="bar-onenight.html" style="color:#23243a;text-decoration:none;margin:0 12px;">BAR ONENIGHT</a>
@@ -359,27 +359,93 @@
     // --- キャスト・内勤データ ---
     const castList = [
       {
-        name: '一ノ瀬 蓮',
-        img: 'https://placehold.jp/200x250.png?text=REN',
+        name: 'きらすず',
+        img: 'worldpic/queennight/cast/kirasuzu.png',
         comment: '皆様のご来店を心よりお待ちしております！',
-        links: ['https://instagram.com/', 'https://twitter.com/'],
-        participants: ['一ノ瀬 蓮', '桜井 翼', '神楽 光']
+        links: ['https://x.com/kiraSUZU0097', 'https://twitter.com/'],
+        participants: ['CLUB QUEENNIGHT']
       },
       {
-        name: '桜井 翼',
-        img: 'https://placehold.jp/200x250.png?text=TSUBASA',
+        name: '雲井',
+        img: 'worldpic/queennight/cast/kumoi.png',
         comment: '楽しい夜を一緒に過ごしましょう！',
-        links: [],
-        participants: ['桜井 翼', '一ノ瀬 蓮']
+        links: ['https://x.com/kumoixxxvrc'],
+        participants: ['CLUB QUEENNIGHT']
+      },
+      {
+        name: 'みかげ',
+        img: 'worldpic/queennight/cast/mikage.png',
+        comment: '最高の夜をお届けします！',
+        links: ['https://x.com/M1K4GE_vrc'],
+        participants: ['CLUB QUEENNIGHT', 'ぶいふぁんっ！']
+      },
+      {
+        name: 'もも',
+        img: 'worldpic/queennight/cast/momo.png',
+        comment: '素敵な時間を一緒に過ごしましょう。',
+        links: ['https://x.com/Momo_VRC_omoM'],
+        participants: ['CLUB QUEENNIGHT']
+      },
+      {
+        name: 'ねこたろ',
+        img: 'worldpic/queennight/cast/nekotaro.png',
+        comment: 'お話できるのを楽しみにしています！',
+        links: ['https://x.com/nekotaro_vrc'],
+        participants: ['CLUB QUEENNIGHT']
+      },
+      {
+        name: 'らう',
+        img: 'worldpic/queennight/cast/rauu.png',
+        comment: '癒しの時間をお届けします。',
+        links: ['https://x.com/gauuvrc'],
+        participants: ['CLUB QUEENNIGHT']
+      },
+      {
+        name: 'たまちゃん',
+        img: 'worldpic/queennight/cast/tamachan.png',
+        comment: '一緒に楽しい思い出を作りましょう！',
+        links: ['https://x.com/midorimo_tamaki'],
+        participants: ['CLUB QUEENNIGHT', 'なりきりごっこの一味']
+      },
+      {
+        name: 'ちむ',
+        img: 'worldpic/queennight/cast/timu.png',
+        comment: '皆さんとお会いできるのを楽しみにしています。',
+        links: ['https://x.com/cnqii3'],
+        participants: ['CLUB QUEENNIGHT']
+      },
+      {
+        name: '宵',
+        img: 'worldpic/queennight/cast/yori.png',
+        comment: '皆さんとお会いできるのを楽しみにしています。',
+        links: ['https://x.com/_41_vrc'],
+        participants: ['CLUB QUEENNIGHT', '懺悔シスターズ']
       }
     ];
     const staffList = [
       {
-        name: '内勤 佐藤',
-        img: 'https://placehold.jp/200x250.png?text=STAFF',
+        name: '燐寸くん',
+        role: '統括本部長',
+        img: 'worldpic/onenight/staff/mahi.png',
         comment: '裏方から全力サポートします！',
-        links: ['https://line.me/'],
-        participants: ['内勤 佐藤', '内勤 鈴木']
+        links: ['https://x.com/How_M_You_M'],
+        participants: ['CLUB ONENIGHT', 'ハムスターグループ']
+      },
+      {
+        name: 'ぷて。。',
+        role: '支配人',
+        img: 'worldpic/onenight/staff/pute.png',
+        comment: 'みんなを支えます！',
+        links: ['https://x.com/pute_yua1252'],
+        participants: ['CLUB ONENIGHT', 'ハムスターグループ']
+      },
+      {
+        name: 'コースケ',
+        role: 'ディレクター',
+        img: 'worldpic/onenight/staff/ko-suke.png',
+        comment: 'よろしくお願いします！',
+        links: ['https://x.com/kousukeVRChat'],
+        participants: ['CLUB ONENIGHT', 'ハムスターグループ']
       }
     ];
     let currentList = castList;
@@ -402,7 +468,13 @@
       const obj = currentList[idx];
       let linksHtml = '';
       if(obj.links && obj.links.length) {
-        linksHtml = `<div class='modal-links'>` + obj.links.map(link=>`<a href='${link}' target='_blank'>リンク</a>`).join('') + `</div>`;
+        linksHtml = `<div class='modal-links' style="text-align:left;">` + obj.links.map(link=>
+          `<a href='${link}' target='_blank' title="X(Twitter)" style="display:inline-block;vertical-align:middle;margin-right:10px;">
+            <svg width="22" height="22" viewBox="0 0 1200 1227" style="vertical-align:middle;">
+              <path fill="#bfa14a" d="M1200 214.2c-44.2 19.6-91.7 32.8-141.6 38.8 50.9-30.5 90-78.8 108.4-136.4-47.7 28.3-100.6 48.9-156.9 60-45-48-109.2-78-180.3-78-136.4 0-247 110.6-247 247 0 19.3 2.2 38.1 6.4 56.1C379.7 389.2 201.4 290.2 82.1 142.6c-21.1 36.2-33.2 78.3-33.2 123.2 0 85 43.3 160 109.2 204.1-40.2-1.3-78-12.3-111.1-30.7v3.1c0 118.8 84.6 217.8 197 240.3-20.6 5.6-42.3 8.6-64.7 8.6-15.8 0-31.2-1.5-46.2-4.4 31.3 97.7 122.2 168.8 229.9 170.7-84.2 66-190.4 105.3-305.9 105.3-19.9 0-39.5-1.2-58.8-3.5C108.8 1102.7 238.2 1140 377.6 1140c453.1 0 701.2-375.5 701.2-701.2 0-10.7-0.2-21.3-0.7-31.8 48.1-34.7 89.8-78.1 122.9-127.8z"/>
+            </svg>
+          </a>`
+        ).join('') + `</div>`;
       }
       let castListHtml = '';
       if(obj.participants && obj.participants.length) {
@@ -447,12 +519,12 @@
             el.style.transform = `translateX(-${distance}px)`;
             setTimeout(() => {
               el.style.transition = 'none';
-              el.style.transform = 'translateX(0)';
+              el.style.transform = `translateX(0)`;
               setTimeout(startScroll, 1000);
             }, (distance/10)*1000+1000);
           } else {
             el.style.transition = 'none';
-            el.style.transform = 'translateX(0)';
+            el.style.transform = `translateX(0)`;
           }
         }, 1000);
       }
