--- a/bar-onenight.html
+++ b/bar-onenight.html
@@ -288,7 +288,7 @@
   <div class="topnav">
     <div class="topnav-inner">
       <a href="index.html" class="topnav-logo">
-        <img src="https://p-ce.group/p3/img/logo_w.png" alt="ONENIGHT GROUP">
+        <img src="worldpic/logo.png" alt="ONENIGHT GROUP">
         <span style="color:#23243a;">ONENIGHT GROUP</span>
       </a>
       <nav class="topnav-menu">
@@ -297,7 +297,7 @@
         <a href="onenight.html" class="topnav-btn" style="color:#23243a;">CLUB ONENIGHT</a>
         <a href="queennight.html" class="topnav-btn" style="color:#23243a;">CLUB QUEENNIGHT</a>
       </nav>
-      </div>
+    </div>
   </div>
 
   <!-- メイン -->
@@ -353,5 +353,17 @@
 </script>
 <!-- ...既存のbody閉じタグ... -->
   </div>
+  <footer style="background: linear-gradient(120deg, #fffbe6 0%, #f7f7fa 100%); color:#23243a; padding:36px 0 18px 0; margin-top:60px; text-align:center; border-top: 1.5px solid #e6d8b7; box-shadow: 0 -2px 12px rgba(191,161,74,0.08);">
+  <div style="max-width:900px;margin:0 auto;">
+    <img src="worldpic/logo.png" alt="ONENIGHT GROUP" style="height:38px;margin-bottom:18px;filter:drop-shadow(0 2px 8px #bfa14a);">
+    <div class="footer-menu" style="margin-bottom:18px;font-size:1.1em;letter-spacing:0.04em;">
+      <a href="index.html" style="color:#23243a;text-decoration:none;margin:0 12px;">TOP</a>
+      <a href="bar-onenight.html" style="color:#23243a;text-decoration:none;margin:0 12px;">BAR ONENIGHT</a>
+      <a href="onenight.html" style="color:#23243a;text-decoration:none;margin:0 12px;">CLUB ONENIGHT</a>
+      <a href="queennight.html" style="color:#23243a;text-decoration:none;margin:0 12px;">CLUB QUEENNIGHT</a>
+    </div>
+    <div style="font-size:0.98em;opacity:0.7;color:#23243a;">© 2025 ONENIGHT GROUP</div>
+  </div>
+</footer>
 </body>
 </html>
