--- a/index.html
+++ b/index.html
@@ -280,10 +280,11 @@
     <!-- 統一ヘッダー -->
   <div class="topnav">
     <div class="topnav-inner">
-      <a href="index.html" class="topnav-logo">
-        <img src="https://p-ce.group/p3/img/logo_w.png" alt="ONENIGHT GROUP">
-        <span style="color:#23243a;">ONENIGHT GROUP</span>
-      </a>
+      <!-- ヘッダーのロゴ -->
+<a href="index.html" class="topnav-logo">
+  <img src="worldpic/logo.png" alt="ONENIGHT GROUP">
+  <span style="color:#23243a;">ONENIGHT GROUP</span>
+</a>
       <nav class="topnav-menu">
         <a href="index.html" class="topnav-btn" style="color:#23243a;">TOP</a>
         <a href="bar-onenight.html" class="topnav-btn" style="color:#23243a;">BAR ONENIGHT</a>
@@ -304,7 +305,8 @@
   </div>
   <footer>
     <div style="max-width:900px;margin:0 auto;">
-      <img src="https://p-ce.group/p3/img/logo_w.png" alt="ONENIGHT GROUP" style="height:38px;margin-bottom:18px;filter:drop-shadow(0 2px 8px #bfa14a);">
+      <!-- フッターのロゴ -->
+<img src="worldpic/logo.png" alt="ONENIGHT GROUP" style="height:38px;margin-bottom:18px;filter:drop-shadow(0 2px 8px #bfa14a);">
       <div class="footer-menu" style="margin-bottom:18px;font-size:1.1em;letter-spacing:0.04em;">
         <a href="index.html" style="color:#23243a;text-decoration:none;margin:0 12px;">TOP</a>
         <a href="bar-onenight.html" style="color:#23243a;text-decoration:none;margin:0 12px;">BAR ONENIGHT</a>
